Remove ads from default theme (dirty way)

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "vuepress dev docs",
-    "build": "vuepress build docs"
+    "build": "cp ./Layout.vue ./node_modules/vuepress-theme-vue/Layout.vue && vuepress build docs"
   },
   "repository": {
     "type": "git",
